route folder added

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "create custom api with mangoDb Atlas(cloud DB) and deploy(render.com)",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
@@ -10,6 +11,7 @@
   "author": "mathan kumar",
   "license": "ISC",
   "dependencies": {
+    "custom-api-deploy": "file:",
     "express": "^4.21.2"
   }
 }
